# mumble-pluginbot-plusplus

./: .gdbinit  .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  appveyor.yml  autogen.sh  configure.ac  indent.sh  meson.build  meson_options.txt
src/: main.cc
src/aither/: console-logger.cc  console-logger.hh  log-severity.hh  log.cc  log.hh  logger.cc  logger.hh  void-logger.cc  void-logger.hh
src/filesystem/: filesystem.hh  path.cc
src/io/: file.hh  raw-s16le-file-sample-reader.cc  raw-s16le-file-sample-reader.hh  raw-s16le-file-sample-writer.cc  raw-s16le-file-sample-writer.hh  sample-reader.cc  sample-reader.hh  sample-writer.cc  sample-writer.hh  wavefile-format.hh  wavefile-reader.hh
src/mpd/: audio-format.cc  audio-format.hh  client.cc  client.hh  connection.cc  connection.hh  error.hh  flag-set.hh  idle.hh  operator.hh  playlist.cc  playlist.hh  song.cc  song.hh  state.hh  stats.cc  stats.hh  status-listener.cc  status-listener.hh  status.cc  status.hh  tag-type.hh
src/mumble/: Mumble.pb.cc  Mumble.pb.h  audio-player.cc  audio-player.hh  audio-recorder.cc  audio-recorder.hh  cert-manager.cc  cert-manager.hh  certificate.hh  channel.cc  channel.hh  client-impl.cc  client-impl.hh  client.cc  client.hh  codec.hh  configuration.hh  connection.cc  connection.hh  img-reader.cc  img-reader.hh  messages.cc  messages.hh  mumble-2-mumble.cc  mumble-2-mumble.hh  mumble.hh  packet-data-stream.cc  packet-data-stream.hh  udp-packet.cc  udp-packet.hh  user.cc  user.hh  version.hh
src/network/: tcp-socket.cc  tcp-socket.hh
src/openssl/: basic-input-output.cc  basic-input-output.hh  memory-basic-input-output.cc  memory-basic-input-output.hh  openssl.cc  openssl.hh  pem.cc  pem.hh
src/openssl/pkey/: envelope-message-digest.cc  envelope-message-digest.hh  envelope.cc  envelope.hh  rsa.cc  rsa.hh
src/openssl/ssl/: context.cc  context.hh  method.cc  method.hh  socket.cc  socket.hh
src/openssl/x509/: certificate.cc  certificate.hh  extension-factory.cc  extension-factory.hh  extension.cc  extension.hh  name.cc  name.hh
src/opus/: constants.hh  decoder.cc  decoder.hh  encoder.cc  encoder.hh
src/pluginbot/: conf.cc  conf.hh  html.cc  html.hh  main.cc  main.hh  plugin.cc  plugin.hh  setting-descriptor.hh  setting-descriptors.cc  setting-descriptors.hh  settings.cc  settings.hh
src/pluginbot/plugins/: command-help.hh  messages.cc  messages.hh  mpd.cc  mpd.hh  version.cc  version.hh  youtube.cc  youtube.hh
src/shell/: shell.cc  shell.hh
src/util/: base64.hh  endian.hh  ffmpeg.cc  ffmpeg.hh  image-magick.cc  image-magick.hh  shell.cc  shell.hh  string.cc  string.hh  youtube-dl.cc  youtube-dl.hh
tools/: echo-git-info.sh  gen-git-info.sh  indent.sh  start-mpd.sh
